# pytorch-geometric-sandbox

./: .gitignore  LICENSE.md  README.md  dataset.py  preprocess_3clpro.py  run_inference.py  setup.cfg
mdgraph/: dataset.py  utils.py
mdgraph/data/: dataset.py  preprocess.py  protein_graph.py  utils.py
mdgraph/models/: ae.py  argva.py  argva_single_graph.py  gnn-lstm.py  graph_vae.py  unet.py
mdgraph/models/gnn_lstm/: config.py  inference.py  model.py  train.py
notebooks/BBA/: gnn-lstm-analysis.ipynb  nsp10_16.ipynb  nsp_loss_curves.ipynb  preprocess.ipynb
plot/: gcn-encoder-20210209-153934.html  gcn-encoder-constant-20210209-154015.html  linear-ae-20210209-153750.html  linear-constant-20210209-154147.html  t-SNE-aa-onehot-node-feature.html  t-SNE-constant-node-feature.html  variational-linear-encoder-20210209-153837.html
test/: graph_plots.ipynb  test_dataset.py  test_preprocess.py
test/data/: onehot_bba_amino_acid_labels.npy
