
[wheel]
universal = 1

[metadata]
name = mdgraph
version = attr: mdgraph.__version__
description = GNNs for MD.
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = https://github.com/braceal/pytorch-geometric-sandbox
author = ramanathanlab
author_email = 
license = MIT
keywords = molecules

[options]
packages= find:
install_requires = 
    pyyaml
    pydantic
    h5py
    black
    flake8
    pre-commit
    pytest
    tqdm
    wandb
    Pillow
    plotly
    sklearn
    MDAnalysis
python_requires = >=3.6

[options.packages.find]
exclude =
    data
    tests
    docs
    env
    
[flake8]
exclude = .git,*migrations*,*alembic*
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231,F541
